--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,3 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+mat-card {
+    box-shadow: none !important;
+}
+
+input {
+    border: none;
+    border-radius: 12px;
+}
