--- a/client/src/app/shared/components/emergency-stop-dialog/emergency-stop-dialog.component.html
+++ b/client/src/app/shared/components/emergency-stop-dialog/emergency-stop-dialog.component.html
@@ -1,6 +1,22 @@
 <h3 mat-dialog-title>Biztosan leállítja a liftet?</h3>
-<mat-dialog-content>Amennyiebn vészleállítással leállítja a liftet, azonnal megáll az egész felvonó.</mat-dialog-content>
+<mat-dialog-content>
+    <p>Amennyiebn vészleállítással leállítja a liftet, azonnal megáll az egész felvonó.</p>
+    <form [formGroup]="form">
+        <mat-form-field>
+            <mat-label>Üzenet</mat-label>
+            <input matInput placeholder="Vészleállás üzenet" formControlName="message">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Megszakítási idő</mat-label>
+            <mat-select formControlName="abortTime">
+              <mat-option [value]="5">5 mp</mat-option>
+              <mat-option [value]="15">15 mp</mat-option>
+              <mat-option [value]="30">30 mp</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </form>
+</mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-flat-button mat-dialog-close>Mégsem</button>
-    <button mat-flat-button [mat-dialog-close]="true" color="warn">VÉSZLEÁLLÍTÁS</button>
+    <button mat-flat-button [mat-dialog-close]="form.value" color="warn">VÉSZLEÁLLÍTÁS</button>
 </mat-dialog-actions>
