--- a/client/src/app/operator/operator.component.html
+++ b/client/src/app/operator/operator.component.html
@@ -13,7 +13,7 @@
   @if((lifts?.length ?? 0) > 0) {
     <mat-chip-listbox>
       @for (lift of lifts; track lift) {
-        <mat-chip-option (selectionChange)="goToLift(lift.id ?? '')">{{lift.id}}</mat-chip-option>
+        <mat-chip-option [matTooltip]="'(' + lift.startLatitude + ',' + lift.startLongitude + ') -> (' + lift.endLatitude + ',' + lift.endLongitude + ')'" (selectionChange)="goToLift(lift.id ?? '')">{{lift.liftName}}</mat-chip-option>
       }
     </mat-chip-listbox>
     
@@ -21,34 +21,96 @@
       <mat-card class="log-card">
         <label class="label">Hőmérséklet szenzor adatok:</label>
         <div #temperatureLogContainer class="log-container" [scrollTop]="temperatureLogContainer.scrollHeight">
-          @for (temperatureLog of temperatureLogs; track temperatureLog) {
-            <p class="log-line">{{ temperatureLog | json }}</p>
-          }
-          @empty {
+          @if (!temperatureDataSource.length) {
             <p class="sensor-notice">Válasszon az elérhető liftek közül, hogy lássa a hőmérséklet szenzoradatokat!</p>
+          } @else {
+            <table mat-table [dataSource]="temperatureDataSource">
+              <ng-container matColumnDef="timestamp">
+                <th mat-header-cell *matHeaderCellDef> Idő </th>
+                <td mat-cell *matCellDef="let element"> {{element.timestamp}} </td>
+              </ng-container>
+            
+              <ng-container matColumnDef="location">
+                <th mat-header-cell *matHeaderCellDef> Hely </th>
+                <td mat-cell *matCellDef="let element"> {{element.location}} </td>
+              </ng-container>
+            
+              <ng-container matColumnDef="value">
+                <th mat-header-cell *matHeaderCellDef> Érték </th>
+                <td mat-cell *matCellDef="let element"> {{element.value}} </td>
+              </ng-container>
+            
+              <tr mat-header-row class="header-row" *matHeaderRowDef="sensorDisplayedColumns; sticky: true"></tr>
+              <tr mat-row *matRowDef="let row; columns: sensorDisplayedColumns;"></tr>
+            </table>
           }
         </div>
       </mat-card>
       <mat-card class="log-card">
         <label class="label">Szél szenzor adatok:</label>
         <div #windLogContainer class="log-container" [scrollTop]="windLogContainer.scrollHeight">
-          @for (windLog of windLogs; track windLog) {
-            <p class="log-line">{{ windLog | json }}</p>
-          }
-          @empty {
-            <p class="sensor-notice">Válasszon az elérhető liftek közül, hogy lássa a szél szenzoradatokat!</p>
-          }
+            @if (!windDataSource.length) {
+              <p class="sensor-notice">Válasszon az elérhető liftek közül, hogy lássa a szél szenzoradatokat!</p>
+            } @else {
+              <table mat-table [dataSource]="windDataSource">
+                <ng-container matColumnDef="timestamp">
+                  <th mat-header-cell *matHeaderCellDef> Idő </th>
+                  <td mat-cell *matCellDef="let element"> {{element.timestamp}} </td>
+                </ng-container>
+              
+                <ng-container matColumnDef="location">
+                  <th mat-header-cell *matHeaderCellDef> Hely </th>
+                  <td mat-cell *matCellDef="let element"> {{element.location}} </td>
+                </ng-container>
+              
+                <ng-container matColumnDef="value">
+                  <th mat-header-cell *matHeaderCellDef> Érték </th>
+                  <td mat-cell *matCellDef="let element"> {{element.value}} </td>
+                </ng-container>
+              
+                <tr mat-header-row class="header-row" *matHeaderRowDef="sensorDisplayedColumns; sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: sensorDisplayedColumns;"></tr>
+              </table>
+            }
         </div>
       </mat-card>
       <mat-card class="log-card">
         <label class="label">Parancsok:</label>
         <div #commandContainer class="log-container" [scrollTop]="commandContainer.scrollHeight">
-          @for (command of commands; track command) {
-            <p class="log-line">{{ command | json }}</p>
-          }
-          @empty {
-            <p class="sensor-notice">Válasszon az elérhető liftek közül és láthatja majd a parancsokat!</p>
-          }
+            @if (!commandDataSource.length) {
+              <p class="sensor-notice">Itt fognak megjelenni a parancsok!</p>
+            }
+            @else {
+              <table mat-table [dataSource]="commandDataSource">
+                <ng-container matColumnDef="timestamp">
+                  <th mat-header-cell *matHeaderCellDef> Idő </th>
+                  <td mat-cell *matCellDef="let element"> {{element.timestamp}} </td>
+                </ng-container>
+              
+                <ng-container matColumnDef="type">
+                  <th mat-header-cell *matHeaderCellDef> Típus </th>
+                  <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+                </ng-container>
+              
+                <ng-container matColumnDef="user">
+                  <th mat-header-cell *matHeaderCellDef> Operátor </th>
+                  <td mat-cell *matCellDef="let element"> {{element.user}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="outcome">
+                  <th mat-header-cell *matHeaderCellDef> Eredmény </th>
+                  <td mat-cell *matCellDef="let element"> {{element.outcome}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="args">
+                  <th mat-header-cell *matHeaderCellDef> Egyéb </th>
+                  <td mat-cell *matCellDef="let element"> {{element.args}} </td>
+                </ng-container>
+              
+                <tr mat-header-row class="header-row" *matHeaderRowDef="commandDisplayedColumns; sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: commandDisplayedColumns;"></tr>
+              </table>
+            }
         </div>
       </mat-card>
       <mat-card class="log-card">
