--- a/client/src/app/operator/operator.component.html
+++ b/client/src/app/operator/operator.component.html
@@ -104,7 +104,7 @@
 
                 <ng-container matColumnDef="args">
                   <th mat-header-cell *matHeaderCellDef> Egyéb </th>
-                  <td mat-cell *matCellDef="let element"> {{element.args}} </td>
+                  <td mat-cell *matCellDef="let element"> {{element.args | json}} </td>
                 </ng-container>
               
                 <tr mat-header-row class="header-row" *matHeaderRowDef="commandDisplayedColumns; sticky: true"></tr>
